namespace EightCare.Domain.Enums;

public enum LifeStage
{
    NotAvailable = 0,
    Sling = 1,
    Juvenile = 2,
    SubAdult = 3,
    Adult = 4
}