namespace EightCare.Domain.Enums;

public enum Sex
{
    Unknown = 0,
    Male = 1,
    SuspectedMale = 2,
    Female = 3,
    SuspectedFemale = 4
}