@startuml Domain Model

' Class definitions
class Collection << AggregateRoot >> {
  + Guid UserId
  + string Name
}

class Animal << Entity >> {
  + string Name
  + DateTimeOffset Received
  + DateTimeOffset LastRehoused
  + DateTimeOffset LastHydrated
  + DateTimeOffset LastSubstrateChanged
  + LifeStage LifeStage
  + Sex Sex
}

class Feeding << Entity >> {
  + DateTimeOffset Date
  + int Amount
  + string Feeder
}

class Molt << Entity >> {
  + DateTimeOffset Date
}

class Species << ValueObject >> {
  + string ScientificName
  + string CommonName
}

' Enums
enum LifeStage {
  NotAvailable = 0
  Sling = 1
  Juvenile = 2
  SubAdult = 3
  Adult = 4
}

enum Sex {
  Unknown = 0
  Male = 1
  SuspectedMale = 2
  Female = 3
  SuspectedFemale = 4
}

' Relations
Collection "1" *-- "0..*" Animal : part of <
Animal "1" *-- "0..*" Feeding : of <
Animal "1" *-- "0..*" Molt : of <
Animal *-- Species : of <
Animal -right- LifeStage
Animal -left- Sex

@enduml